--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 console = "0.15.7"
 dialoguer = "0.11.0"
+tinytemplate = "1.2.1"
+serde = { version = "1.0", features = ["derive"] }
